solar system title pt-br version added

--- a/projects/src/solar-system-application-AR.html
+++ b/projects/src/solar-system-application-AR.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-    <title>Solar System - AR</title>
+    <title id="title1">Solar System - AR</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <script src="../../js/translation.js"></script>
     <style>
         body {
             margin: 0;
@@ -73,6 +74,13 @@
         else {
             mainMediumQuality("en-US");
         }
+    </script>
+    <script>
+         TRANSLATION.add(
+            '#title1',
+            'Solar System - AR',
+            'Sistema Solar - RA'
+        );
     </script>
 </body>
 
