--- a/projects/src/solar-system-application.html
+++ b/projects/src/solar-system-application.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-    <title>Solar System</title>
+    <title id="title1">Solar System</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <script src="../../js/translation.js"></script>
     <style>
         body {
             margin: 0;
@@ -92,6 +93,13 @@
         else{                                           //NOT QUALITY SETTED
             mainMediumQuality();
         }*/
+    </script>
+    <script>
+         TRANSLATION.add(
+            '#title1',
+            'Solar System',
+            'Sistema Solar'
+        );
     </script>
 </body>
 
