architecture and platonic-solids titles pt-br added

--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -84,7 +84,7 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/architecture-AR.html" target="_" style="text-decoration: none;">
+                <a href="javascript: TRANSLATION.redirect('projects/src/architecture-AR.html', '', true);">
                     <div class="more-modes w3-display-container"
                          style="background: url('img/Architecture/blur-AR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
@@ -106,7 +106,7 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/architecture-application-VR.html" target="_" style="text-decoration: none;">
+                <a href="javascript: TRANSLATION.redirect('projects/src/architecture-application-VR.html', '', true);">
                     <div class="more-modes w3-display-container"
                          style="background: url('img/Architecture/blur-VR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
