--- a/projects/src/architecture-AR.html
+++ b/projects/src/architecture-AR.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>AR boilerplate</title>
+    <title id="title1">Architecture AR</title>
+    <script src="../../js/translation.js"></script>
 
     <style>
         html,
@@ -29,6 +30,13 @@
     <script src="../libs/util/loadScreen/LoadScreen.js"></script>
 
     <script type="module" src="architecture-AR.js"></script>
+    <script>
+        TRANSLATION.add(
+            '#title1',
+            'Architecture AR',
+            'Arquitetura RA'
+        );
+    </script>
 </body>
 
 </html>
