--- a/projects/src/architecture-application.html
+++ b/projects/src/architecture-application.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>House</title>
+    <title id="title1">Architecture</title>
     <link rel="stylesheet" href="../../css/w3.css">
     <script src="../../js/translation.js"></script>
+    
     <style>
         html,
         body {
@@ -67,6 +68,12 @@
                     }
             }
         }
+        
+        TRANSLATION.add(
+            '#title1',
+            'Architecture',
+            'Arquitetura'
+        );
 
         TRANSLATION.add(
             '#move',
