--- a/projects/src/platonic-solids-application.html
+++ b/projects/src/platonic-solids-application.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 
 <head>
-    <title>Platonic Solids</title>
+    <title id="title1">Platonic Solids</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <style>
@@ -75,6 +75,13 @@
             language = "en-US";
             init(language);
         }
+    </script>
+    <script>
+        TRANSLATION.add(
+            '#title1',
+            'Platonic Solids',
+            'Sólidos Platônicos'
+        );
     </script>
 </body>
 
