--- a/projects/src/architecture-application-VR.html
+++ b/projects/src/architecture-application-VR.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Architecture VR</title>
+    <title id="title1">Architecture VR</title>
     <link rel="stylesheet" href="../../css/w3.css">
+    <script src="../../js/translation.js"></script>
 
     <style>
         body {
@@ -93,7 +94,13 @@
         </a-entity>
 
     </a-scene>
-
+    <script>
+         TRANSLATION.add(
+            '#title1',
+            'Architecture VR',
+            'Arquitetura RV'
+        );
+    </script>
 </body>
 
 </html>
