--- a/projects/src/platonic-solids-application-VR.html
+++ b/projects/src/platonic-solids-application-VR.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Platonic Solids VR</title>
+    <title id="title1">Platonic Solids VR</title>
     <link rel="stylesheet" href="../../css/w3.css">
+    <script src="../../js/translation.js"></script>
 
     <style>
         body {
@@ -502,6 +503,13 @@
         </a-entity>
 
     </a-scene>
+    <script>
+         TRANSLATION.add(
+                '#title1',
+                'Platonic Solids - VR',
+                'Sólidos Platônicos - RV'
+        );
+    </script>
 </body>
 
 </html>
