vascular diseases page title pt-br version added

--- a/projects/src/vascular-diseases-application-VR.html
+++ b/projects/src/vascular-diseases-application-VR.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vascular Diseases VR</title>
+    <title id="title">Vascular Diseases VR</title>
     <link rel="stylesheet" href="../../css/w3.css">
+    <script src="../../js/translation.js"></script>
 
     <style>
         body {
@@ -424,6 +425,13 @@
             </a-entity>
         </a-entity>
     </a-scene>
+    <script>
+         TRANSLATION.add(
+            '#title',
+            'Vascular Diseases VR',
+            'Doenças Vasculares RV'
+        );
+    </script>
 </body>
 
 </html>
