circuits application messages pt-br fixed

--- a/projects/src/vascular-diseases-application.html
+++ b/projects/src/vascular-diseases-application.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="page-title">Vascular Diseases</title>
+    <script src="../../js/translation.js"></script>
 
     <style>
         html,
@@ -240,6 +241,18 @@
     <script src="../libs/loaders/GLTFLoader.js"></script>
     <script src="../libs/loaders/DRACOLoader.js"></script>
     <script src="vascular-diseases.js"></script>
+    <script>
+        TRANSLATION.add(
+            '#page-title',
+            'Vascular Diseases',
+            'Doenças Vasculares'
+        );
+        TRANSLATION.add(
+            '#panel-title',
+            'Diseases',
+            'Doenças'
+        );
+    </script>
 </body>
 
 </html>
