--- a/projects/src/circuits-application-VR.html
+++ b/projects/src/circuits-application-VR.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Circuits VR</title>
+    <title id="title">Circuits VR</title>
+    <script src="../../js/translation.js"></script>
 
     <style>
         body {
@@ -24,8 +25,8 @@
     <script type="text/javascript" charset="UTF-8" src="../libs/vr-interface.js"></script>
 
     <script>
-        let currentLang = 'en-US';
-        const messages = [];
+        var currentLang = 'en-US';
+        var messages = [];
         messages["en-US"] = [
             'Wire block added to clipboard',
             'Curved wire block added to clipboard',
@@ -35,13 +36,14 @@
             'Battery block added to clipboard',
         ];
         messages["pt-BR"] = [
-            'Fio adcionado na area de transferência',
-            'Fio em formato de L adcionado na area de transferência',
-            'Fio em formato de T adcionado na area de transferência',
-            'Lampada adcionada na area de transferência',
-            'Ventoinha adcionada na area de transferência',
-            'Bateria adcionada na area de transferência',
+            'Fio adcionado à area de transferência',
+            'Fio em formato de L adcionado à área de transferência',
+            'Fio em formato de T adcionado à área de transferência',
+            'Lâmpada adcionada à área de transferência',
+            'Ventoinha adcionada à área de transferência',
+            'Bateria adcionada à área de transferência',
         ];
+        lang = 'pt-BR'
 
         function changeLanguage(lang) {
             if (lang != currentLang) {
@@ -106,31 +108,31 @@
 
                 vrInterface.addButton('wire', '#wire', () => {
                     addToClipboard(0);
-                    vrInterface.showMessage(messages[currentLang][0]);
+                    vrInterface.showMessage(messages[TRANSLATION.currentLang][0]);
                 });
                 vrInterface.addButton('l-block', '#lwire', () => {
                     addToClipboard('lblock');
-                    vrInterface.showMessage(messages[currentLang][1]);
+                    vrInterface.showMessage(messages[TRANSLATION.currentLang][1]);
                 });
                 vrInterface.addButton('t-block', '#twire', () => {
                     addToClipboard('tblock');
-                    vrInterface.showMessage(messages[currentLang][2]);
+                    vrInterface.showMessage(messages[TRANSLATION.currentLang][2]);
                 });
 
                 vrInterface.addButton('rotate', '#rotateImage', () => rotate());
 
                 vrInterface.addButton('lamp', '#lamp', () => {
                     addToClipboard('lamp');
-                    vrInterface.showMessage(messages[currentLang][3]);
+                    vrInterface.showMessage(messages[TRANSLATION.currentLang][3]);
                 });
                 vrInterface.addButton('fan', '#fan', () => {
                     addToClipboard('fan');
-                    vrInterface.showMessage(messages[currentLang][4]);
+                    vrInterface.showMessage(messages[TRANSLATION.currentLang][4]);
                 });
 
                 vrInterface.addButton('battery', '#battery', () => {
                     addToClipboard('battery');
-                    vrInterface.showMessage(messages[currentLang][5]);
+                    vrInterface.showMessage(messages[TRANSLATION.currentLang][5]);
                 });
 
                 vrInterface.addButton('dispose', '#binImage', () => clearClipboard())
@@ -550,7 +552,8 @@
 
         <a-plane position="0 1.45 -1.35" width="2.1" height="1" color="#4D3100"></a-plane>
         <a-entity
-            vr-interface="dimension: 2 4; worldPosition:-0.045 1.45 -1.30; buttonSize: 0.4 0.4; gap: 0.03 0.03; border: 2 #362211; movementBar: false; transparency: true;"
+            vr-interface="dimension: 2 4; worldPosition:-0.045 1.45 -1.30; buttonSize: 0.4 0.4; gap: 0.03 0.03; border: 2 #362211; movementBar: false; transparency: true;
+            font:assets/fonts/roboto-msdf.json; negate: false;"
             panel>
             <a-entity class="panelModel" gltf-model="#wireModel" position="-0.65 1.65 -1.30" rotation="90 90 90">
             </a-entity>
@@ -592,7 +595,13 @@
             </a-entity>
         </a-entity>
     </a-scene>
-
+    <script>
+        TRANSLATION.add(
+            '#title',
+            'Circuits VR',
+            'Circuitos RV'
+        );
+    </script>
 </body>
 
 </html>
