projectile page titles fixed

--- a/projects/src/projectile-motion-application-AR.html
+++ b/projects/src/projectile-motion-application-AR.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
      <script src="../../js/translation.js"></script>
-    <title>AR - Projectile Motion</title>
+    <title id="title">Projectile Motion - AR</title>
 
     <style>
         html,
@@ -373,6 +373,11 @@
             '#velocity',
             'Velocity: __._m/s',
             'Velocidade: __._m/s'
+        );
+        TRANSLATION.add(
+            '#title',
+            'Projectile Motion - AR',
+            'Movimento de Projéteis - RA'
         );
     </script>
 
