--- a/projects/src/projectile-motion-application-VR.html
+++ b/projects/src/projectile-motion-application-VR.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projectile Motion VR</title>
+    <title id="title">Projectile Motion VR</title>
+    <script src="../../js/translation.js"></script>
 
     <style>
         .panel {
@@ -407,6 +408,11 @@
                 '<b>Start:</b> Press the VR button in the bottom right corner to enter in Virtual Reality mode and start.',
                 '<b>Começar:</b> Pressione o botão VR no canto inferior direito para entrar no modo Realidade Virtual e iniciar.',
             );
+            TRANSLATION.add(
+            '#title',
+            'Projectile Motion - VR',
+            'Movimento de Projéteis - RV'
+        );
         </script>
 
 
