--- a/projects/src/projectile-motion-application.html
+++ b/projects/src/projectile-motion-application.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>Projectile Motion</title>
+    <title id="title">Projectile Motion</title>
     <script src="../../js/translation.js"></script>
     <style>
         html,
@@ -236,7 +236,11 @@
             'The displacement along x-axis and y-axis formulas are given below:',
             'As fórmulas de deslocamento ao longo dos eixos x e y são fornecidas abaixo:'
         );
-
+        TRANSLATION.add(
+            '#title',
+            'Projectile Motion',
+            'Movimento de Projéteis'
+        );
     </script>
 </body>
 
