--- a/projects/src/historical-figures-application-VR.html
+++ b/projects/src/historical-figures-application-VR.html
@@ -2,7 +2,8 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <script src="../../js/translation.js"></script> 
     <style>
         body {
             margin: 0;
@@ -14,7 +15,7 @@
             height: 100%;
         }
     </style>
-    <title>Historical Figures</title>
+    <title id="title">Historical Figures VR</title>
 </head>
 <body>
     <div id="webgl-output"></div>
@@ -30,6 +31,13 @@
             language = "en-US";
             MAIN.main(language);
         }
+    </script>
+    <script>
+         TRANSLATION.add(
+            '#title',
+            'Hisorical Figures VR',
+            'Figuras Históricas RV'
+        );
     </script>
 </body>
 </html>
