eletric circuits link refer fixed

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="  ('projects/circuits.html')">
+                <a href="javascript: TRANSLATION.redirect('projects/circuits.html')">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div id="circuits" class="project-title w3-display-topleft w3-padding">Eletric
                             Circuits</div>
