--- a/projects/src/circuits-application-VR.html
+++ b/projects/src/circuits-application-VR.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="title">Circuits VR</title>
+    <title id="title">Eletric Circuits VR</title>
     <script src="../../js/translation.js"></script>
 
     <style>
@@ -598,8 +598,8 @@
     <script>
         TRANSLATION.add(
             '#title',
-            'Circuits VR',
-            'Circuitos RV'
+            'Eletric Circuits VR',
+            'Circuitos Elétricos RV'
         );
     </script>
 </body>
